2004-03-05  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	Backport:
	2004-02-04  Mark Mitchell  <mark@codesourcery.com>

	PR c++/9941
	* rtti.c (tinfo_base_init): Use import_export_tinfo to decide the
	linkage for the typeinfo name string.

2004-02-24  Jason Merrill  <jason@redhat.com>

	PR c++/13944
	* except.c (do_free_exception): Remove #if 0 wrapper.
	(build_throw): Use it if we elide a copy into the exception object.

2004-03-01  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* decl.c (current_binding_level): Define as an lvalue.

2004-02-23  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>

	PR c++/13635
	* pt.c (push_template_decl_real): Make sure DECL_TI_ARGS of DECL
	has full set of arguments.

2004-02-23  Giovanni Bajo  <giovannibajo@gcc.gnu.org>

	PR c++/14250
	* cvt.c (build_expr_type_conversion): Type must be complete before
	looking up for conversions.

2004-02-22  Jakub Jelinek  <jakub@redhat.com>

	* decl.c (reshape_init): Convert array designator to sizetype.

2004-02-22  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	Backport from mainline
        2004-02-13  Mark Mitchell  <mark@codesourcery.com>
	PR c++/14083
	* call.c (build_conditional_expr): Call force_rvalue on the
	non-void operand in the case that one result is a throw-expression
	and the other is not.

2004-02-22  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	Backport from mainline
	2003-02-06  Giovanni Bajo  <giovannibajo@gcc.gnu.org>
	PR c++/14033
	* decl.c (require_complete_types_for_parms): Do not insert
	error_mark_node in the parameter list.

2004-02-22  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	Backport from mainline
	2004-02-04  Mark Mitchell  <mark@codesourcery.com>
	PR c++/13932
	* call.c (convert_like_real): Use "converting" rather than
	"argument" as the descriptive keyword to
	dubious_conversion_warnings.
	* typeck.c (convert_for_assignment): Do not call
	dubious_conversion_warnings.
