@@ -1,3 +1,8 @@
+2004-03-09  Giovanni Bajo  <giovannibajo@gcc.gnu.org>
+
+	PR c++/14409
+	* g++.dg/template/spec12.C: New test.
+
 2004-03-06  Ulrich Weigand  <uweigand@de.ibm.com>
 
 	* gcc.dg/20040306-1.c: New test.
