@@ -1,3 +1,9 @@
+2004-03-09  Giovanni Bajo  <giovannibajo@gcc.gnu.org>
+
+	PR c++/14409
+	* pt.c (determine_specialization): For member templates, match also
+	constness.
+
 2004-03-05  Gabriel Dos Reis  <gdr@integrable-solutions.net>
 
 	Backport:
